<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_lane_event_classifier</name>
  <version>0.1.0</version>
  <description>Classifies lane events (lane change, intentional crossing) for event logging.</description>

  <maintainer email="zulfaqar.azmi@tier4.jp">Zulfaqar Azmi</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <build_depend>generate_parameter_library</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>autoware_internal_debug_msgs</depend>
  <depend>autoware_map_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_universe_utils</depend>
  <depend>autoware_utils</depend>
  <depend>autoware_utils_geometry</depend>
  <depend>autoware_vehicle_info_utils</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>fmt</depend>
  <depend>geometry_msgs</depend>
  <depend>lanelet2_core</depend>
  <depend>magic_enum</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>tl_expected</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
